fix agencies bugs